<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightsteelblue"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/amount_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/amount"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/badge_text_input_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/badge_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/amount_of_badge"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/badge_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/badge"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/badge_entry_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/base_gray"
        android:entries="@array/badges_list"
        android:popupBackground="@color/base_gray" />

    <TextView
        android:id="@+id/convert_of_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/convert_to"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/badge_output_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/base_gray"
        android:entries="@array/badges_list"
        android:popupBackground="@color/base_gray" />

    <Button
        android:id="@+id/convert_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/md_falcon_A400"
        android:text="@string/convert"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/conversion_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/base_gray"
        android:text="@string/conversion"
        android:textAlignment="center"
        android:textColor="@color/black" />

</LinearLayout>